--- a/code/app/src/main/res/layout/fragment_planning_lists.xml
+++ b/code/app/src/main/res/layout/fragment_planning_lists.xml
@@ -70,8 +70,23 @@
                 app:layout_anchorGravity="bottom|right|end"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/goShop"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/defineShop"
                 />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/defineShop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_normal"
+                android:layout_marginBottom="269dp"
+                android:contentDescription="@string/add_smob_shop"
+                android:src="@drawable/ic_baseline_store_mall_directory_24"
+                app:fabSize="normal"
+                app:layout_anchor="@id/smobItemsRecyclerView"
+                app:layout_anchorGravity="bottom|left|start"
+                app:layout_constraintBottom_toBottomOf="@+id/smobItemsRecyclerView"
+                app:layout_constraintStart_toEndOf="@id/add_smob_item_fab"
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/goShop"
